appId: com.camaplus.app
---
- tapOn:
    point: "12%,9%"
- tapOn:
    text: "확인"
    optional: true
- extendedWaitUntil:
    visible: "건강한 습관을 관리하세요"
    timeout: 20000
